--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react + webpack",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "start": "webpack"
   },
   "author": "susheel",
   "license": "ISC",
